Source/JavaScriptCore: LLInt should support JSVALUE64 https://bugs.webkit.org/show_bug.cgi?id=79609 <rdar://problem/10063437>

Patch by Filip Pizlo <fpizlo@apple.com> on 2012-03-10
Reviewed by Gavin Barraclough and Oliver Hunt.

Ported the LLInt, which previously only worked on 32-bit, to 64-bit. This
patch moves a fair bit of code from LowLevelInterpreter32_64.asm to the common
file, LowLevelInterpreter.asm. About 1/3 of the LLInt did not have to be
specialized for value representation.

Also made some minor changes to offlineasm and the slow-paths.

* llint/LLIntData.cpp:
(JSC::LLInt::Data::performAssertions):
* llint/LLIntEntrypoints.cpp:
* llint/LLIntSlowPaths.cpp:
(LLInt):
(JSC::LLInt::llint_trace_value):
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
(JSC::LLInt::jitCompileAndSetHeuristics):
* llint/LLIntSlowPaths.h:
(LLInt):
(SlowPathReturnType):
(JSC::LLInt::SlowPathReturnType::SlowPathReturnType):
(JSC::LLInt::encodeResult):
* llint/LLIntThunks.cpp:
* llint/LowLevelInterpreter.asm:
* llint/LowLevelInterpreter32_64.asm:
* llint/LowLevelInterpreter64.asm:
* offlineasm/armv7.rb:
* offlineasm/asm.rb:
* offlineasm/ast.rb:
* offlineasm/backends.rb:
* offlineasm/instructions.rb:
* offlineasm/parser.rb:
* offlineasm/registers.rb:
* offlineasm/transform.rb:
* offlineasm/x86.rb:
* wtf/Platform.h:

LayoutTests: Object.freeze broken on latest Nightly
https://bugs.webkit.org/show_bug.cgi?id=80577

Reviewed by Oliver Hunt.

* fast/js/preventExtensions-expected.txt:
* fast/js/script-tests/preventExtensions.js:
    - Added test cases.



Canonical link: https://commits.webkit.org/97987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110396 268f45cc-cd09-0410-ab3c-d52691b4dbfc